NGRT4N, version 1.0.1
 - 10-05-2012 : Become open source under GPL3 License