@@ -1,2 +1,8 @@
 NGRT4N, version 1.0.1
  - 10-05-2012 : Become open source under GPL3 License
+* 31-06-2012 Rodrigue Chakode
+ - Distributed architecture
+ - General relooking of user interface for better experience
+ - Chart refined
+ - event consolidation through status calculation rules
+ - custom propagaration rules for event
